Fix jumping menu trigger

--- a/lqt.css
+++ b/lqt.css
@@ -499,7 +499,7 @@ li.lqt-command-reply {
 
 .lqt-thread-actions-trigger {
 	padding: 0.5em;
-	border: 1px transparent;
+	border: 1px transparent solid;
 }
 
 .lqt-thread-header-commands:hover .lqt-thread-actions-trigger {
